# wasm_tracer

./: .gitignore  .prettierrc.js  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
assets/: main.css  main.d.ts  main.d.ts.map  main.js  main.js.map  main.ts  wasm_tracer.d.ts  wasm_tracer.js  wasm_tracer_bg.d.ts  wasm_tracer_bg.wasm  worker.d.ts.map  worker.js  worker.js.map
src/: camera.rs  geometric_objects.rs  lib.rs  materials.rs  ray.rs  scene.rs  shade_record.rs  world.rs
ts-src/: tsconfig-base.json
ts-src/dom/: main.ts  tsconfig.json
ts-src/workers/: tsconfig.json  worker.ts
ts-src/workers/typings/: wasm_tracer.d.ts
