[package]
name = "wasm_tracer"
version = "0.1.3"
authors = ["Marko Stevanović <stevanovicmarko@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
cgmath = { version = "0.17.0", features = ["swizzle"] }
cascade = "0.1.2"
lazy_static ="1.3.0"
arr_macro = "0.1.0"
wbg-rand = "0.4.1"
# rand = "0.5.4"
# num =  {version = "0.2.0", default-features = false }

[profile.release]
debug = false
debug-assertions = false
panic = "abort"
lto = true
opt-level = 3 # optimize for performance
# opt-level = 's' # optimize for size
# opt-level = z